--- a/app/src/main/res/layouts/parking_owner/layout/requested_location.xml
+++ b/app/src/main/res/layouts/parking_owner/layout/requested_location.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="locationAdapter"
-            type="com.example.sparespark.view.parking_owner.adapter.RequestLocationAdapter" />
+            type="com.example.sparespark.view.common.RequestLocationAdapter" />
 
     </data>
 
@@ -13,11 +13,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:adapter="@{locationAdapter}"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
