--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FAEAB1</color>
-    <color name="purple_500">#E5BA73</color>
+    <color name="purple_500">#CC9A49</color>
     <color name="purple_700">#C58940</color>
     <color name="teal_200">#181D31</color>
     <color name="teal_700">#678983</color>
