--- a/app/src/main/res/layouts/parking_owner/layout/additional_dialog.xml
+++ b/app/src/main/res/layouts/parking_owner/layout/additional_dialog.xml
@@ -7,7 +7,7 @@
     android:background="@color/teal_700"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.parking_owner.OwnerMap">
+    tools:context=".view.parking_owner.MapsFragment">
 
         <LinearLayout
             android:layout_width="300sp"
